// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsernamePane calls \`swap\` onChange 1`] = `
[
  "updateEntity",
  "lock",
  1,
  "setUsername",
  "newUser",
  "any",
  false,
  false,
]
`;

exports[`UsernamePane renders correctly 1`] = `
<DocumentFragment>
  <div
    data-__type="username_input"
    data-autocomplete="false"
    data-disabled="false"
    data-invalidhint="invalidErrorHint"
    data-isvalid="false"
    data-placeholder="placeholder"
    data-value="username"
  />
</DocumentFragment>
`;

exports[`UsernamePane sets \`blankErrorHint\` when username is empty 1`] = `
<DocumentFragment>
  <div
    data-__type="username_input"
    data-autocomplete="false"
    data-disabled="false"
    data-invalidhint="blankErrorHint"
    data-isvalid="false"
    data-placeholder="placeholder"
  />
</DocumentFragment>
`;

exports[`UsernamePane sets \`usernameFormatErrorHint\` when usernameLooksLikeEmail() returns false and \`validateFormat\` is true 1`] = `
<DocumentFragment>
  <div
    data-__type="username_input"
    data-autocomplete="false"
    data-disabled="false"
    data-invalidhint="usernameFormatErrorHint,min,max"
    data-isvalid="false"
    data-placeholder="placeholder"
    data-value="username"
  />
</DocumentFragment>
`;

exports[`UsernamePane sets autoComplete to true when \`allowAutocomplete\` is true 1`] = `
<DocumentFragment>
  <div
    data-__type="username_input"
    data-autocomplete="true"
    data-disabled="false"
    data-invalidhint="invalidErrorHint"
    data-isvalid="false"
    data-placeholder="placeholder"
    data-value="username"
  />
</DocumentFragment>
`;

exports[`UsernamePane sets isValid as true when \`isFieldVisiblyInvalid\` is false 1`] = `
<DocumentFragment>
  <div
    data-__type="username_input"
    data-autocomplete="false"
    data-disabled="false"
    data-invalidhint="invalidErrorHint"
    data-isvalid="true"
    data-placeholder="placeholder"
    data-value="username"
  />
</DocumentFragment>
`;
